# numogram

./: .gitignore  LICENSE  README.md  hermes.md  numogram-base-explorer.py
entropy/: README.md  pyproject.toml
entropy/src/numogram_entropy/: __init__.py  cli.py  core.py  source.py
entropy/tests/: test_core.py
mod-writer/: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
mod-writer/csi_transducer/: csi_transducer.py
mod-writer/mod_writer/: cli.py  composer.py  mapping.py  song.py  utils.py  writer.py
mod_writer/: BATCH_GENERATOR_README.md  CHANGELOG.md  CREDITS.md  SKILL.md  __init__.py  check_gate.py  check_gate2.py  composer_extension.py  compute_zone_centroids.py  eval_real_audio.py  gate_sweep_zone4.py  gate_sweep_zone6.py  m3_profile.py  phase4.1.pid  phase4.6_regen.pid  phase4_6_mixed_retrain.py  pyproject.toml  run_phase3.py  run_phase4_6.py  run_phase4_dataset.py  validate_zone_bias.py  zone_mir_snapshot.py
mod_writer/data/: canonical_vectors.json
mod_writer/mod_writer/: cli.py  composer.py  mapping.py  mir_profiler.py  plugin.py  song.py  writer.py
mod_writer/mod_writer/classifier/: __init__.py  data_collector.py  phase4_4_correlation.py  phase4_5_real_audio.py  trainer.py
mod_writer/mod_writer/classifier/artifacts/: dataset_balanced_900.npz  latent_encodings_d10.npz  model.joblib  phase4.2.pid  real_audio_predictions.csv  real_resonator_v3_dataset.npz  scaler.joblib  vae_d10.pt  zone_clf.joblib  zone_scaler.joblib
mod_writer/mod_writer/classifier/artifacts/real_audio_run/: real_audio_X.npz
mod_writer/mod_writer/classifier/artifacts/real_audio_run/source_files/: 1967. Bob Dylan - John Wesley Harding (CBS CBSCD 63252, Japan-Europe) - John Wesley Harding.flac  (+22 more)
mod_writer/mod_writer/real_curation/: phase4.5_download_list.tsv
mod_writer/mod_writer/scripts/: m3_loop.py
mod_writer/references/: modformat.md
mod_writer/renderer/: README-TD-Watcher.md  SKILL.md  TD-SETUP.md  __init__.py  analyzer.py  palettes.py  renderer.py  synth.py  td-watcher.py
mod_writer/renderer/scripts/: README.md
mod_writer/tests/: test_just_intonation.py  test_mir_profiler.py  test_song_builder.py  test_triangular_semantics.py
mod_writer/vae/: dataset_regen.sh  mir_to_mod.py  sample_latent.py  train_vae.py
mod_writer/vae/artifacts/vae_d10/: Z_train.npz  vae_best.pt  vae_final.pt
mod_writer/vae_m2/: mir_to_mod.py  vae_hallucinate.py  vae_sample.py  vae_train.py
mod_writer/visualizer/: pretext-zone-reader.html  zone-style-manifesto.md  zone-styles.html
(+1262 files in other folders)
