[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mod-writer"
version = "0.5.1"
description = "Minimal .mod (Protracker) module writer with numogram-native extensions"
requires-python = ">=3.11"
authors = [{name = "Hermes Agent + CCRU lineage"}]
license = {text = "MIT"}

[tool.setuptools]
packages = {find = {}}

[project.scripts]
mod-writer = "mod_writer.cli:main"
